--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
  
     <body>
         <p>ちゃんたまテキストboxひょっこりはん</p>
+        <p>ojt大変そうら</p>
         <div >
             <label for="updatebox">
                 <span >編集</span>
