--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <body>
         <p>ちゃんたまテキストboxひょっこりはん</p>
         <p>ojt大変そうら</p>
+        <p>コンフリクトを起こすため</p>
         <div >
             <label for="updatebox">
                 <span >編集</span>
