edit index.html and add favicon then rebase
edit style.css

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <p>コンフリクトを起こすため</p>
         <p>新しいデータを追加した by tuan</p>
         <p>またコンフリクト</p>
+        <p>favicon.icoを追加する</p>
         <div >
             <label for="updatebox">
                 <span >編集</span>
