--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <p>新しいデータを追加した by tuan</p>
         <p>またコンフリクト</p>
         <p>favicon.icoを追加する</p>
+        <p>衝突させたろ</p>
         <div >
             <label for="updatebox">
                 <span >編集</span>
